--- a/template/npc-sheet.html
+++ b/template/npc-sheet.html
@@ -158,6 +158,7 @@
                                 {{#ifeq lootsheettype "Loot"}}
                                     {{#if lootCurrency}}
                                         <div class="item-controls">
+                                            <a class="split-coins" title="Split Coins"><i class="fas fa-gem"></i></a>
                                             <a class="currency-loot" title="Loot Coins"><i class="fas fa-gem"></i></a>
                                         </div>
                                     {{/if}}
