basic selling of items

--- a/css/lootsheet-simple.css
+++ b/css/lootsheet-simple.css
@@ -300,6 +300,7 @@ input#quantity:focus {
 }
 
 .loot-sheet-npc.sheet.actor .item-buyall,
+.loot-sheet-npc.sheet.actor .item-sellall,
 .loot-sheet-npc.sheet.actor .item-lootall {
 	display: none !important;
 }
