--- a/css/lootsheet-simple.css
+++ b/css/lootsheet-simple.css
@@ -1,326 +1,37 @@
 
 
-.loot-sheet-npc .gm-section {
-	/* height: 48px; */
-	color: #000;
-	/* font-weight: 700; */
-	font-size: 20px;
-	margin-top: 0.5rem;
-	text-align: center;
-	border-top: 1px solid #CCC;
-	font-family: "Nodesto", "Signika", "Palatino Linotype", serif;
-	font-size: 20px;
-	color: #4b4a44;
-	font-size: 18px;
-}
+/* NEW STYLES FOR NEW SHEET STYLE */
 
-.loot-sheet-npc .gm-header {
-	margin-top: 0.5rem;
-}
-
-.loot-sheet-npc .inventory-filters .item-controls {
-	flex: 0 0 20px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    justify-content: flex-end;
-}
-
-.loot-sheet-npc .inventory-filters .item-controls a, .loot-sheet-npc.sheet .items-list .item-controls a {
-	flex: 1 0 22px;
-    font-size: 12px;
-    text-align: center;
-    color: #7a7971;
-}
-
-.loot-sheet-npc .gm-settings .permissions-list,
-.loot-sheet-npc .gm-settings .coin-list {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-
-.loot-sheet-npc .gm-settings .sheet-types,
-.loot-sheet-npc .gm-settings .merchant-settings {
-	margin-right: 10px;
-}
-
-.loot-sheet-npc .gm-settings .merchant-settings .flexrow {
-	border-bottom: 1px solid #CCC;
-	margin-bottom: 5px;
-}
-
-.loot-sheet-npc .gm-settings .merchant-settings .flexrow {
-	border-bottom: 1px solid #CCC;
-	margin-bottom: 5px;
-}
-
-.loot-sheet-npc input[type="text"], .loot-sheet-npc input[type="number"], .loot-sheet-npc select {
-    height: calc(100% - 2px);
-    border: 1px solid #7a7971;
-    background: rgba(0, 0, 0, 0.05);
-    color: #000000;
-    text-overflow: ellipsis;
-}
-
-.loot-sheet-npc select.sheet-rolltable {
-	max-width: 125px;
-}
-
-.loot-sheet-npc .gm-settings .merchant-settings .flexrow h4 {
-	margin: 2px 0 0 0;
-}
-
-.loot-sheet-npc .gm-settings .merchant-settings {
-	margin-left: 24px;
-}
-
-.loot-sheet-npc .gm-settings .coins-list {
-	padding-left: 24px;
-}
-
-.loot-sheet-npc .gm-settings h4.sheet-name {
-	flex: 1;
-	margin: 0 0 0 24px;
-	line-height: 22px;
-}
-
-.loot-sheet-npc .gm-settings .permission,
-.loot-sheet-npc .gm-settings .denomination {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: flex-start;
-	height: 21px;
-	line-height: 21px;
-	border-bottom: 1px solid #CCC;
-	font-size: 13px;
-}
-
-.loot-sheet-npc .gm-settings .sheet-type-info,
-.loot-sheet-npc .gm-settings .permission-info,
-.loot-sheet-npc .gm-settings .merchant-settings-info,
-.itemsonce-info  {
-  color: #7a7971;
-  margin: 6px 6px 6px 24px;
-  display: none;
-}
-
-.loot-sheet-npc .gm-settings .help {
-	color: #7a7971;
-	font-size: 13px;
-}
-
-.loot-sheet-npc .gm-settings .permission,
-.loot-sheet-npc .gm-settings .denomination>* {
-	flex: 1;
-  flex-wrap: inherit;
-  height: auto;
-}
-
-.loot-sheet-npc .gm-settings .permission .permission-name {
-	margin: 0;
-}
-
-.loot-sheet-npc .gm-settings .permission .permission-proficiency {
-	text-align: center;
-	flex: 0 0 24px;
-}
-
-.loot-sheet-npc.sheet .sheet-header {
-    flex: 0 0 60px;
-}
-
-.loot-sheet-npc.sheet section.sheet-lower.flexrow {
-    flex-grow: 1;
-}
-
-.loot-sheet-npc.sheet section.sheet-content.content {
-	display: flex;
-    flex-direction: column;
-}
-
-.loot-sheet-npc .gm-settings .permission .permission-proficiency i.fa-circle {
-	font-size: 10px;
-}
-
-.loot-sheet-npc .gm-settings .split-coins {
-	width: 95%;
-}
-
-.loot-sheet-npc.sheet .window-content form {
-	overflow-y: auto !important;
-	display: flex;
-	flex-direction: column;
-}
-
-img.sheet-profile {
-	border: none;
-	max-width: 220px;
-	max-height: 220px;
-}
-
-.loot-sheet-npc.sheet.actor .inventory-filters .currency span {
-	flex: 0 0 105px;
-	white-space: nowrap;
-}
-
-.loot-sheet-npc.sheet.actor .inventory-filters .currency input[type="text"] {
-	width: 40px;
-}
-
-.currency.inventory span span {
-	width: 40px;
-  text-align: center;
-	margin-left: 8px;
-	white-space: nowrap;
-}
-
-.loot-sheet-npc.sheet.actor .inventory-filters .currency label {
-	white-space: nowrap;
-}
-
-.loot-sheet-npc.sheet.actor .inventory-filters .currency input {
-	vertical-align: bottom;
-}
-
-.loot-sheet-npc .inventory-filters .item-controls a.currency-loot {
-	display: inline-block;
-    padding-top: 4px;
-}
-
-.loot-sheet-npc.sheet.actor label.denomination {
-	display: inline-block;
-	padding-left: 24px;
-	padding-bottom: 6px;
-	vertical-align: middle;
-}
-
-.loot-sheet-npc.sheet.actor label.denomination.gp {
-	background: url(../images/gp.png) no-repeat;
-	background-size: auto 20px;
-}
-
-.loot-sheet-npc.sheet.actor label.denomination.pp {
-	background: url(../images/pp.png) no-repeat;
-	background-size: auto 20px;
-}
-
-.loot-sheet-npc.sheet.actor label.denomination.ep {
-	background: url(../images/ep.png) no-repeat;
-	background-size: auto 20px;
-}
-
-.loot-sheet-npc.sheet.actor label.denomination.sp {
-	background: url(../images/sp.png) no-repeat;
-	background-size: auto 20px;
-}
-
-.loot-sheet-npc.sheet.actor label.denomination.cp {
-	background: url(../images/cp.png) no-repeat;
-	background-size: auto 20px;
-}
-
-section.sheet-sidebar.sidebar {
-	flex: 0 0 250px;
-	border-right: 2px groove #eeede0;
-}
-
-.sheet-profile-img {
-	text-align: center;
-}
-
-
-.loot-sheet-npc.sheet.sheet.actor .inventory-list .item-controls-empty {
-    flex: 0 0 90px;
-}
-
-.loot-sheet-npc.sheet.actor .inventory-list .item .item-quantity,
-.loot-sheet-npc.sheet.actor .inventory-list .item .item-weight,
-.loot-sheet-npc.sheet.actor .inventory-list .item .item-price {
-	flex: 0 0 55px;
-	color: #424242;
-	font-size: 12px;
-}
-
-.loot-sheet-npc.sheet.actor .inventory-list .item-detail {
-	flex: 0 0 55px;
-	font-size: 12px;
-	text-align: center;
-	border-right: 1px solid #c9c7b8;
-	word-break: break-word;
-	white-space: nowrap;
-	overflow: hidden;
-}
-
-.loot-sheet-npc.sheet.actor .inventory-list .item .item-controls {
-	flex: 0 0 90px !important;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: flex-start;
-	justify-content: flex-end;
-}
-
-.loot-sheet-npc.sheet .sheet-header .charbutton {
-	flex: 0 0 200px;
-	margin: auto;
-	text-align: right;
-}
-
-button.price-modifier {
-	width: auto;
-	padding: 1px 10px;
-	margin-right: 5px;
-}
-
-.loot-sheet-npc.sheet .sheet-navigation {
-	margin-bottom: 15px;
-}
-
-input#price-modifier-percent-display {
+.loot-sheet-npc .window-header .header-button {
 	background: none;
-	border: 1px solid transparent;
-	width: 50px;
 }
 
-input#price-modifier-percent-display:hover,
-input#price-modifier-percent-display:focus,
-input#quantity:hover,
-input#quantity:focus {
-	border: 1px solid #111;
-	box-shadow: 0 0 8px red;
+.loot-sheet-npc.sheet.actor.npc .sheet-header input {
+	background: none;
+	color: inherit;
 }
 
-.loot-sheet-npc .sheet-profile-img {
-	padding: 10px;
+:is(.dnd5e-theme-dark, .theme-dark) .loot-sheet-npc.sheet.actor.npc .ability-score > img, .loot-sheet-npc.sheet.actor.npc.dnd5e-theme-dark .ability-score > img {
+    filter: invert(1);
 }
 
-.loot-sheet-npc.sheet .sheet-header h1 input {
-	margin: 0px;
+.loot-sheet-npc input.currency {
+	color: inherit;
 }
 
-.loot-sheet-npc.sheet.actor .inventory-list .inventory-header .item-controls a.item-create {
-    flex: initial;
-}
-.loot-sheet-npc.sheet.actor .inventory-list .inventory-header .item-controls-empty .create-button {
-    text-align: right; 
-	padding: 0 10% 0 0;
+.loot-sheet-npc .sheet-body {
+	margin-top: -50px;
 }
 
-
-
-
-.loot-sheet-npc li.item.flexrow.inventory-header {
-    padding: 8px 0 0 0;
+.loot-sheet-npc .sidebar {
+	margin-top: 50px;
 }
 
-.loot-sheet-npc .currency input[type="number"] {
-    max-width: 3rem;
+.loot-sheet-npc .middle input {
+	color: inherit;
 }
 
-
-.loot-sheet-npc.sheet.actor .item-lootall {
-	display: none !important;
+.loot-sheet-npc.sheet.actor.npc .sheet-body .main-content .inventory-element .bottom .encumbrance {
+	border: none;
+    box-shadow: none;
 }
